--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -24,17 +24,19 @@
                  data-test-id="functions.item-name"
                  data-ng-class="[$ctrl.getFunctionsTableColSize('rowName')]">
                 <div class="function-name text-ellipsis">
-                    <span data-uib-tooltip-html="$ctrl.functionNameTooltip"
+                    <span data-test-id="functions.item-name_name.text"
+                          data-uib-tooltip-html="$ctrl.functionNameTooltip"
                           data-tooltip-append-to-body="true"
                           data-tooltip-placement="top"
                           data-tooltip-popup-delay="200">
                     {{$ctrl.function.metadata.name}}
                     </span>
-                    <span class="version-text item-cell-sub-text">
+                    <span data-test-id="functions.item-name_version.text" class="version-text item-cell-sub-text">
                     {{$ctrl.isFunctionCollapsed ? '$LATEST' : ''}}
                     </span>
                 </div>
                 <span class="ncl-icon-api-gateway"
+                      data-test-id="functions.item-name_api-gw.icon"
                       data-ng-if="$ctrl.function.status.apiGateways.length > 0"
                       data-uib-tooltip="{{ 'functions:TOOLTIP.USED_BY_API_GATEWAY' | i18next:{apiGatewayName: $ctrl.function.status.apiGateways[0]} }}"
                       data-tooltip-placement="top"
