--- a/src/nuclio/functions/version/version.tpl.html
+++ b/src/nuclio/functions/version/version.tpl.html
@@ -18,7 +18,7 @@
                         data-ng-class="{'disabled': $ctrl.isDeployButtonDisabled()}"
                         data-ng-click="$ctrl.isInValidDeployState() || $ctrl.deployButtonClick($event)"
                         data-uib-tooltip="{{ ($ctrl.deployResult.status.state === 'building' ? 'functions:TOOLTIP.DEPLOY_IN_PROGRESS' :
-                                              $ctrl.version.ui.isTriggersChanged ? 'functions:TOOLTIP.APPLY_CHANGES_TO_DEPLOY' :
+                                              $ctrl.version.ui.isTriggersChanged || $ctrl.version.ui.isVolumesChanged ? 'functions:TOOLTIP.APPLY_CHANGES_TO_DEPLOY' :
                                               'functions:TOOLTIP.DEPLOY_INVALID_CONFIG') | i18next }}"
                         data-tooltip-enable="$ctrl.isDeployButtonDisabled()"
                         data-tooltip-placement="left"
