--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -141,6 +141,7 @@
                     <div class="input-title">
                         {{ 'functions:MIN' | i18next }}
                         <igz-more-info data-description="{{ 'functions:MIN_REPLICAS' | i18next:{default: $ctrl.defaultFunctionConfig.spec.minReplicas} }}"
+                                       data-default-tooltip-placement="top"
                                        data-trigger="click">
                         </igz-more-info>
                     </div>
@@ -165,6 +166,7 @@
                     <div class="input-title" data-ng-class="{ asterisk: $ctrl.minReplicas === 0 }">
                         {{ 'functions:MAX' | i18next }}
                         <igz-more-info data-description="{{ 'functions:MAX_REPLICAS' | i18next:{default: $ctrl.defaultFunctionConfig.spec.maxReplicas} }}"
+                                       data-default-tooltip-placement="top"
                                        data-trigger="click">
                         </igz-more-info>
                     </div>
@@ -207,7 +209,10 @@
             <div class="igz-row form-row range-inputs-row slider-block">
                 <div class="igz-col-25 row-title no-margin target-cpu-title">
                     <span>{{ 'common:TARGET_CPU' | i18next }}</span>
-                    <igz-more-info data-description="{{ 'functions:TARGET_CPU_DESCRIPTION' | i18next:{default: $ctrl.defaultFunctionConfig.spec.targetCPU} }}"></igz-more-info>
+                    <igz-more-info data-description="{{ 'functions:TARGET_CPU_DESCRIPTION' | i18next:{default: $ctrl.defaultFunctionConfig.spec.targetCPU} }}"
+                                   data-default-tooltip-placement="top"
+                                   data-trigger="click">
+                    </igz-more-info>
                 </div>
                 <div class="igz-col-65 row-input slider">
                     <igz-slider-input-block data-slider-config="$ctrl.targetCpuSliderConfig"
