Impl [igzValidatingInputField] Refactor component to use ngModel
Also:
- `igzValidatingInputField`: Remove `on-blur` attribute which was
  redundant (there is already an `item-blur-callback` attribute).
- Nuclio function triggers:
  - All kinds: add a red asterisk to mark mandatory fields.
  - For HTTP annotations and Cron event handlers: [bugfix] Key field
    was not mandatory, now it is.
- `FormValidationService`: add `validateAllFields` method to validate
  all immediate and nested fields of a form (`ngForm`).
- Use `ngForm.$setSubmitted()` and `ngForm.$setPristine()` instead of
  `ngForm.$submitted = true/false`.
- Nuclio: Remove unnecessary border color change on hovering input
  fields.
- Better use `jQuery` where it is already there, instead of DOM APIs
  (offset position, dimensions, $document, ...).

--- a/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -28,8 +28,7 @@
                     <span class="input-label asterisk">
                         {{ 'common:NAME' | i18next }}
                     </span>
-                    <igz-validating-input-field class="nuclio-validating-input"
-                                                data-field-type="input"
+                    <igz-validating-input-field data-field-type="input"
                                                 data-input-name="name"
                                                 data-input-value="$ctrl.functionData.metadata.name"
                                                 data-validation-is-required="true"
