--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -72,8 +72,7 @@
                                     <span class="input-label asterisk">
                                         {{ 'common:NAME' | i18next }}
                                     </span>
-                                    <igz-validating-input-field class="nuclio-validating-input"
-                                                                data-field-type="input"
+                                    <igz-validating-input-field data-field-type="input"
                                                                 data-input-name="function-name-{{$index}}"
                                                                 data-input-value="$ctrl.functionName"
                                                                 data-form-object="$ctrl.functionFromTemplateForm['templateForm' + $index]"
