--- a/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
+++ b/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
@@ -11,8 +11,7 @@
                 {{ 'common:FUNCTION_NAME' | i18next }}
             </div>
             <div class="field-input function-name-input">
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="input"
+                <igz-validating-input-field data-field-type="input"
                                             data-input-name="spec.displayName"
                                             data-input-value="$ctrl.newFunctionName"
                                             data-is-focused="true"
