--- a/src/nuclio/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -12,8 +12,7 @@
                     {{ 'common:NAME' | i18next }}
                 </div>
                 <div class="field-content">
-                    <igz-validating-input-field class="nuclio-validating-input"
-                                                data-field-type="input"
+                    <igz-validating-input-field data-field-type="input"
                                                 data-input-name="displayName"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-input-value="$ctrl.workingCopy.spec.displayName"
@@ -42,8 +41,7 @@
                     {{ 'common:PATH' | i18next }}
                 </div>
                 <div class="field-content">
-                    <igz-validating-input-field class="nuclio-validating-input"
-                                                data-field-type="input"
+                    <igz-validating-input-field data-field-type="input"
                                                 data-input-name="path"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-input-value="$ctrl.workingCopy.spec.attributes.path"
