--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
@@ -12,8 +12,7 @@
             <div class="field-label">
                 {{ 'functions:REMOTE_PATH' | i18next }}
             </div>
-            <igz-validating-input-field class="nuclio-validating-input"
-                                        data-field-type="input"
+            <igz-validating-input-field data-field-type="input"
                                         data-is-focused="true"
                                         data-placeholder-text="{{ 'common:PLACEHOLDER.ENTER_PATH' | i18next }}">
             </igz-validating-input-field>
