[General] Use validation rules instead of patterns

--- a/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -32,8 +32,8 @@
                                                 data-input-name="name"
                                                 data-input-value="$ctrl.functionData.metadata.name"
                                                 data-validation-is-required="true"
-                                                data-validation-rules="$ctrl.validationRules"
-                                                data-validation-max-length="{{$ctrl.nameMaxLength}}"
+                                                data-validation-rules="$ctrl.validationRules.functionName"
+                                                data-validation-max-length="{{$ctrl.maxLengths.functionName}}"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-form-object="$ctrl.functionFromScratchForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
