--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -28,7 +28,7 @@
                                                     data-update-data-field="timeout.min"
                                                     data-form-object="$ctrl.basicSettingsForm"
                                                     data-validation-is-required="true"
-                                                    data-validation-pattern="$ctrl.validationPatterns.digits"
+                                                    data-validation-rules="$ctrl.validationRules.integer"
                                                     data-placeholder-text="{{ 'functions:MIN' | i18next }}...">
                         </igz-validating-input-field>
                         <div class="values-label">{{ 'functions:MIN' | i18next }}</div>
@@ -41,7 +41,7 @@
                                                     data-update-data-field="timeout.sec"
                                                     data-form-object="$ctrl.basicSettingsForm"
                                                     data-validation-is-required="true"
-                                                    data-validation-pattern="$ctrl.validationPatterns.digits"
+                                                    data-validation-rules="$ctrl.validationRules.integer"
                                                     data-placeholder-text="{{ 'functions:SEC' | i18next }}...">
                         </igz-validating-input-field>
                         <div class="values-label">{{ 'functions:SEC' | i18next }}</div>
