--- a/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
+++ b/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
@@ -18,8 +18,8 @@
                                             data-form-object="$ctrl.duplicateFunctionForm"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData)"
                                             data-validation-is-required="true"
-                                            data-validation-rules="$ctrl.validationRules"
-                                            data-validation-max-length="{{$ctrl.nameMaxLength}}"
+                                            data-validation-rules="$ctrl.validationRules.functionName"
+                                            data-validation-max-length="{{$ctrl.maxLengths.functionName}}"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}">
                 </igz-validating-input-field>
             </div>
