--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -12,11 +12,10 @@
             </div>
         </div>
 
-        <div class="common-table-body">
+        <div class="common-table-body" data-igz-extend-background>
             <div class="igz-scrollable-container"
                  data-ng-scrollbars
-                 data-ng-scrollbars-config="$ctrl.scrollConfig"
-                 data-igz-extend-background>
+                 data-ng-scrollbars-config="$ctrl.scrollConfig">
                 <ncl-collapsing-row data-ng-repeat="trigger in $ctrl.triggers"
                                     data-item="trigger"
                                     data-type="trigger"
