--- a/src/nuclio/functions/version/version.tpl.html
+++ b/src/nuclio/functions/version/version.tpl.html
@@ -67,5 +67,5 @@
                          data-version="$ctrl.version"
                          data-ng-class="{'ncl-version-configuration-tabs': $ctrl.getCurrentStateName() === 'app.project.function.edit.configuration'}">
     </ncl-navigation-tabs>
-    <section class="ncl-edit-version-view" data-igz-extend-background data-ui-view="version"></section>
+    <section class="ncl-edit-version-view" data-ui-view="version"></section>
 </div>
