Fix [Nuclio] Function "View YAML": no syntax highlighting

--- a/src/nuclio/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -72,7 +72,7 @@
                      class="field-content code-edit-section">
                     <ncl-monaco data-function-source-code="$ctrl.workingCopy.spec.body"
                                 data-selected-theme="$ctrl.bodyTheme"
-                                data-language="json"
+                                data-language="'json'"
                                 data-mini-monaco="true"
                                 data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"
                                 data-read-only="false">
