Impl [Nuclio] Triggers: modify fields for Kafka & V3IO Stream
- Cron trigger: improve UX of Interval and Schedule fields
- Refactor, cleanup, JSDoc

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -164,7 +164,7 @@
                                           data-update-number-input-field="minReplicas"
                                           data-allow-empty-field="true"
                                           data-placeholder=""
-                                          data-decimal-number="0"
+                                          data-precision="0"
                                           data-value-step="1"
                                           data-validation-is-required="false"
                                           data-min-value="0"
@@ -189,7 +189,7 @@
                                           data-update-number-input-field="maxReplicas"
                                           data-allow-empty-field="true"
                                           data-placeholder="{{ $ctrl.minReplicas === 0 ? ('functions:PLACEHOLDER.MAX_REQUIRED' | i18next) : '' }}"
-                                          data-decimal-number="0"
+                                          data-precision="0"
                                           data-value-step="1"
                                           data-validation-is-required="$ctrl.minReplicas === 0"
                                           data-min-value="$ctrl.minReplicas || 1">
